[package]
name = "abrute"
version = "0.1.3"
authors = ["Daniel P. Clark <6ftdan@gmail.com>"]
description = "AESCrypt Brute force attempter."
documentation = "http://danielpclark.github.io/abrute/index.html"
homepage = "https://github.com/danielpclark/abrute"
repository = "https://github.com/danielpclark/abrute"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["crypto","text","cryptography","security"]
categories = ["cryptography"]

[dependencies]
array_tool = "^1.0"
tempdir = "0.3"
clap = "^2.26"
digits = "^1.0.0"
num_cpus = "^1.0"
rayon = "0.8.2"
